--- a/docs/src/components/Docmap/index.scss
+++ b/docs/src/components/Docmap/index.scss
@@ -1,7 +1,7 @@
 @import '../../assets/styles/variables.scss';
 
 .docmapLinks {
-    width: 18%;
+    width: 16%;
     padding: $padding-md;
     border-left: 1px var(--border-color) solid;
     box-shadow: var(--box-shadow);
