--- a/docs/src/components/Document/index.scss
+++ b/docs/src/components/Document/index.scss
@@ -10,7 +10,6 @@
     padding-left: $document-padding;
 
 
-
     .documentView {
         min-height: 75vh;
         padding: $padding-md $padding-md 0;
@@ -52,6 +51,7 @@
     pre {
         white-space: pre-wrap;
         background: var(--code-block-color);
+        width: auto;
         padding: 20px;
         display: flex;
         font-family: $font-family-code;
@@ -183,6 +183,7 @@
         font-size: $font-size-h4;
         margin-top: $sub-title-margin;
         font-weight: $font-weight-normal;
+        margin-bottom: $sub-title-margin-h5;
     }
 
     h5 {
